      version 1-1-1 over later versions.  Before it would find the latest 
      version in the repository if you specified the label in the r.add()
      command (CNY-1993).

  o Bug Fixes:
    * When parsing the GPG keyring, PGP version 2 keys are now ignored.
      (CNY-2115)
    * Direct key signatures for PGP keys are now accepted. (CNY-2120)

Changes in 1.2.1:
  o Build Changes:
    * The addGitSnapshot() source action is now available. (CNY-1965)
    * Cooking derived packages no longer warns about their
      experimental state. (CNY-2092)
    * loadInstalled does not search the local database for a matching
      package on checkin, but instead searches the repository. This
      makes it easier to develop packages that are correct, with the
      potential of not building on the current machine. (CNY-2027)

  o Client Changes:
    * The Conary client is now less aggressive in sending keepalive
      packets with long-running requests. (CNY-2104)
    * Promote and clone callbacks are more verbose. (CNY-2063)

  o Bug Fixes:
    * Schema migration for the Latest table now correctly handles
      branches that end in redirects. (CNY-2081)
    * Adding a large number of user maps is now more efficient
      if the new addServerGlobs method is used. (CNY-2083)
    * Redirects between branches on the same label, which were
      necessary before Conary 1.2.0, are again handled correctly.
      (CNY-2103)
    * The 'conary updateall' command again properly handles the
      --replace-files command-line argument. (CNY-2112)
    * Patches are no longer partially applied when building. A
      partially applying patch results now in a failure. (CNY-2017)
    * A bug which caused Conary to incorrectly determine the flags
      for python dependencies on 64-bit systems has been fixed.
      (CNY-2091)
    * Ruby dependencies now function properly in a bootstrap build
      of the ruby package. (CNY-2109)

Changes in 1.2.0:
  o Build Changes: